# discord-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
base64/: fn.decode.html  fn.encode.html  index.html
dasi/: enum.ChannelRef.html  enum.Error.html  fn.read_image.html  index.html  sidebar-items.js  struct.Connection.html  struct.Discord.html  struct.EditProfile.html  struct.EditServer.html  struct.State.html  type.Result.html
dasi/connection/: sidebar-items.js  struct.Connection.html
dasi/error/: enum.Error.html  sidebar-items.js  type.Result.html
dasi/model/: enum.Channel.html  enum.ChannelType.html  enum.Event.html  enum.GameType.html  enum.NotificationLevel.html  enum.OnlineStatus.html  enum.PermissionOverwrite.html  enum.PossibleServer.html  enum.RelationshipType.html  enum.VerificationLevel.html  index.html  sidebar-items.js  struct.Attachment.html  struct.ChannelId.html  struct.CurrentUser.html  (+29 more)
mime_guess/: fn.get_mime_type.html  fn.get_mime_type_opt.html  fn.get_mime_type_str.html  fn.guess_mime_type.html  fn.guess_mime_type_opt.html  fn.octet_stream.html  index.html
multipart/: index.html  macro.chain_result!.html
phf_shared/: fn.hash.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: api.in.rs  api.rs  connection.rs  error.rs  lib.rs  model.rs  state.rs  voice.rs
url/: struct.SocketAddrs.html
utf8_ranges/: struct.Utf8Sequences.html
websocket/: index.html
(+319 files in other folders)
