[package]
name = "dasi"
version = "0.0.1"
authors = ["Lucas Falch <lucas@wasd.dk>", "mtib <mtb@tibyte.net>"]

description = "Discord API library"
readme = "README"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/tifalch/dasi"

[dependencies]
hyper = "0.7"
serde_json = "0.6"
websocket = "0.15"
bitflags = "0.3"
byteorder = "0.4"
opus = {version = "0.1", optional = true}
time = "0.1"
log = "0.3"
sodiumoxide = { version = "0.0.9", features = [], optional = true }
multipart = { version = "0.5", features = ["hyper", "client"] }
base64-rs = "0.1.0"

[features]
default = []
voice = ["opus", "sodiumoxide"]
