[package]
name = "dasi"
version = "0.0.1"
authors = ["Lucas Falch <lucas@wasd.dk>", "mtib <mtb@tibyte.net>"]

description = "Discord API library"
readme = "README"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/tifalch/dasi-rs"

[dependencies]
hyper = "0.8.1"
serde_json = "0.7.1"
# Newest version is 0.17.1, but that one requires new hyper
websocket = "0.15.1"
bitflags = "0.7"
byteorder = "0.5.3"
opus = {version = "0.1", optional = true}
time = "0.1"
log = "0.3"
sodiumoxide = { version = "0.0.10", features = [], optional = true }
multipart = { version = "0.7", features = ["hyper", "client"] }
base64-rs = "0.1.0"

[features]
default = []
voice = ["opus", "sodiumoxide"]
